# web-server

./: .gitignore  Cargo.toml  README.md  log4rs.yaml  organizations.json
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
migrations/: 20230307204633_organizations_table.up.sql  20230313132023_organizations_table.up.sql
src/: main.rs  profanity.rs  store.rs
src/entities/: class.rs  course.rs  day.rs  info_chunks.rs  knowledge_nav.rs  mod.rs  organization.rs  pagination.rs  responses.rs  schedule.rs  single_chunk.rs  subject.rs  user.rs
src/routes/: mod.rs  organization.rs
src/types/: mod.rs
